add extra scanning tool

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOCKER_REPO: 'dro-oci-dev-local'
-      IMAGE_NAME: 'ejs-demo:${{ github.run_number }}'
+      IMAGE_NAME:   '
       JF_URL: https://${{ vars.JF_HOST }}/
       JF_PROJECT: ${{ vars.JF_PROJECT_KEY }}
     outputs:
@@ -86,6 +86,14 @@ jobs:
           jf docker scan --fail=false  --threads=5 ${{ vars.JF_HOST }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }} --severity='HIGH,CRITICAL' --vuln --format=sarif > jfrog_docker_scan.sarif
           sed -i s/"\"uri\": \"\""/"\"uri\": \"${{ vars.JF_URL }}\/${{ env.DOCKER_REPO }}\/${{ env.IMAGE_NAME }}:${{ github.run_number }}\""/g jfrog_docker_scan.sarif
         # adding the built docker into the JFrog build info
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: 'ejs-demo:${{ github.run_number }}'
+          format: 'cyclonedx'
+          output: 'bom.xml' 	
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH,MEDIUM,LOW'  
       - name: Upload output to generate autofix
         uses: github/codeql-action/upload-sarif@v3
         with:
